# pytest-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: client.py
models/: booking.py
tests/: conftest.py  test_auth.py  test_delete_booking.py  test_get_bookings.py  test_post_bookings.py  test_put_bookings.py
tests/test_jsonplaceholder/: test_posts.py
